--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-icons": "^2.1.0"
+	}
 }
